# psdl-inspector

./: .gitignore  LICENSE  README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/models/: __init__.py  schemas.py
backend/app/routers/: __init__.py  export.py  generate.py  outline.py  validate.py
backend/app/services/: __init__.py  docx_exporter.py  exporter.py  ollama_service.py  openai_service.py  outliner.py  parser.py  validator.py
backend/test-scenarios/: questions.txt
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AuditPanel.tsx  BundlePanel.tsx  CanonicalView.tsx  DAGView.tsx  Editor.tsx  ExportButton.tsx  GenerationPanel.tsx  GovernancePanel.tsx  Logo.tsx  OutlineTree.tsx  ThemeToggle.tsx  ValidationPanel.tsx  index.ts
frontend/src/context/: ThemeContext.tsx
frontend/src/lib/: api.ts
